--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,8 @@
 {
-  "singleQuote": true,
-  "printWidth": 120,
+  "semi": false,
   "trailingComma": "none",
-  "bracketSpacing": true,
-  "semi": false
+  "singleQuote": true,
+  "printWidth": 80,
+  "tabWidth": 2,
+  "bracketSpacing": true
 }
