--- a/package.json
+++ b/package.json
@@ -4,43 +4,57 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./src/index.ts",
+    "docker:up": "docker compose up -d",
+    "docker:down": "docker compose down",
+    "test": "dotenv -e .env.test npx prisma migrate deploy && npm run docker:up && dotenv -e .env.test -- jest -i",
+    "dev": "nodemon --files ./src/index.ts",
     "start": "npx tsc -w"
+  },
+  "prisma": {
+    "seed": "ts-node-dev prisma/seed.ts"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.[t|j]sx?$": "babel-jest"
+    }
   },
   "author": "alfian",
   "license": "ISC",
   "devDependencies": {
-    "@types/cookie-parser": "^1.4.3",
+    "@babel/preset-env": "^7.22.9",
+    "@babel/preset-typescript": "^7.22.5",
+    "@jest/globals": "^29.6.1",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/express-validator": "^3.0.0",
-    "@types/moment": "^2.13.0",
+    "@types/jest": "^29.5.3",
     "@types/morgan": "^1.9.4",
     "@types/multer": "^1.4.7",
     "@types/node": "^20.2.5",
+    "@types/supertest": "^2.0.12",
+    "babel-jest": "^29.6.1",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
-    "sequelize-cli": "^6.6.0",
+    "prisma": "^5.0.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@prisma/client": "^5.0.0",
     "@types/bcrypt": "^5.0.0",
-    "@types/body-parser": "^1.19.2",
     "@types/jsonwebtoken": "^9.0.2",
     "bcrypt": "^5.1.0",
-    "body-parser": "^1.20.2",
-    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.1.3",
+    "dotenv-cli": "^7.2.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
-    "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.3.3",
-    "sequelize": "^6.31.1"
+    "winston": "^3.10.0"
   }
 }
